# Genrify

./: .gitignore  Cargo.toml
public/: index.html
src/: main.rs
