[package]
name = "genrify"
version = "0.1.0"
authors = ["Dan Appel <dan.appel00@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2"
actix-rt = "1"
actix-files = "0.2.1"
actix-session = "0.3.0"
env_logger = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
json = "0.12"
rspotify = "0.9"
